--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
+    "@mui/x-data-grid": "^6.4.0",
+    "@mui/x-data-grid-generator": "^6.4.0",
+    "@mui/x-data-grid-pro": "^6.4.0",
     "@next/font": "^13.1.1",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.26.1",
@@ -13,6 +21,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.0.0",
     "realm-web": "^2.0.0"
   },
   "devDependencies": {
