--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/font": "^13.1.1",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.26.1",
+    "compare-versions": "^6.0.0-rc.1",
     "formik": "^2.2.9",
     "next": "latest",
     "react": "^18.2.0",
