--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
+    "react-router": "^6.14.0",
     "realm-web": "^2.0.0"
   },
   "devDependencies": {
