--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
     "react-router": "^6.14.0",
-    "realm-web": "^2.0.0"
+    "realm-web": "^2.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.43",
